quote alignment fixed

--- a/style.css
+++ b/style.css
@@ -133,8 +133,7 @@ a {
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding-top: 100px;
+    padding: 100px 300px;
 }
 
 #quoteContent {
@@ -142,12 +141,13 @@ a {
     color: #1F2937;
     font-style: italic;
     font-weight: 1;
+    text-align: center;
 }
 
 #quotee {
     font-size: 25px;
     font-weight: bold;
-    margin-left: auto;
+    text-align: right;
 }
 
 /* Advert */ 
